--- a/style.css
+++ b/style.css
@@ -45,8 +45,6 @@ h2 {
 
   cursor: pointer;
   transition: all 300ms;
-
-  list-style-type: none;
 }
 
 .card:hover {
@@ -66,4 +64,8 @@ h2 {
   margin: 0 auto;
 
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+}
+
+li {
+  list-style-type: none;
 }
